--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^6.22.5",
     "@sanity/image-url": "^1.1.0",
     "next": "15.0.3",
+    "next-intl": "^3.25.1",
     "next-sanity": "^9.8.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
