--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/client": "^6.22.5",
     "@sanity/image-url": "^1.1.0",
+    "date-fns": "^4.1.0",
     "next": "15.0.3",
     "next-intl": "^3.25.1",
     "next-sanity": "^9.8.15",
